--- a/museum/css/style.css
+++ b/museum/css/style.css
@@ -278,7 +278,6 @@ body{
   -moz-columns: 456px auto;
   -webkit-columns: 456px auto;
   columns: 456px auto;
-  margin-bottom: -24px;
 }
 
 .gallery__item {
@@ -299,3 +298,153 @@ body{
   display: block;
 } 
 
+.tickets h2{
+  padding-top: 75px;
+}
+
+.tickets__inner{
+  color: #000;
+  display: flex;
+  margin-bottom: 75px;
+}
+
+.tickets__img{
+  width: 720px;
+  height: 550px;
+  margin-right: 60px;
+}
+
+.tickets__buying{
+  display: flex;
+  justify-content: space-between;
+}
+
+.tickets__radio{
+  display: flex;
+  flex-direction: column;
+  padding-right: 215px;
+}
+
+.tickets__title{
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 33px;
+  margin-bottom: 50px;
+  color: #000000;
+}
+
+.tickets__label{
+  display: block;
+  position: relative;
+  padding-left: 40px;
+  margin-bottom: 25px;
+  font-size: 22px;
+  line-height: 26px;
+  width: 270px;
+  cursor: pointer;
+}
+
+.tickets__label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 17px;
+  width: 17px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.tickets__label:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.tickets__label input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.tickets__label:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.tickets__label input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.tickets__label .checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
+
+
+.tickets__amount {
+  margin-left: auto;
+}
+
+
+
+
+
+.tickets__amount{
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+
+
+.panorama{
+  display: block;
+  width: 100%;
+  height: 400px;
+}
+
+.contacts__inner{
+  color: #000;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 75px;
+}
+
+.contacts__title{
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 33px;
+  margin-bottom: 50px;
+}
+
+/* .contacts__list{
+  display: flex;
+} */
+
+.contacts__link{
+  color: #000;
+}
+
+.contacts__item{
+  line-height: 26px;
+  margin-bottom: 25px;
+}
+
+.contacts__map{
+  width: 960px;
+  height: 620px;
+}
