--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -390,7 +390,7 @@ body {
 
 .settings{
   width: 500px;
-  height: 400px;
+  height: 500px;
   position: absolute;
   background-color: #fff;
   left: 20px;
@@ -529,6 +529,33 @@ body {
 
 .photo-from-active{
   border: 1px solid #000;
+}
+
+.tag{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 0;
+}
+
+.tag-title{
+  font-weight: bold;
+}
+
+.tag-input{
+  display: block;
+  padding: 0;
+  margin: 0;
+  border: none;
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  padding: 5px;
+  border: 1px solid #000;
+}
+
+.tag-input::placeholder{
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
 }
 
 @media (max-width: 768px) {
